--- a/src/app/shared/home/my-projects/say-about-me/say-about-me/say-about-me.component.html
+++ b/src/app/shared/home/my-projects/say-about-me/say-about-me/say-about-me.component.html
@@ -6,7 +6,7 @@
     <p>{{ 'TESTIMONIAL_Subtitle_MOBILE' | translate }}</p>
   </div>
 
-  <div class="bubble-container">
+  <div #bubbleContainer class="bubble-container">
 
     <div class="bubble-box">
       <div class="bubble-text">
