--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -1,440 +1,179 @@
+// ===========================
+// HEADER MAIN CONTAINER
+// ===========================
+
 header {
-    height: calc(100vh - 200px);
-    max-width: 1920px;
-    padding-left: 100px;
-    padding-right: 100px;
-    padding-top: 100px;
-    display: flex;
-    margin: 0 auto;
-    justify-content: space-between;
-
-    @media screen and (max-width: 1620px) {
-        h1 {
-            text-align: center;
-            width: 100%;
-        }
-    }
-
-    @media screen and (max-width: 1340px) {
-        padding-left: 50px;
-        padding-right: 50px;
-    }
-
-    @media screen and (max-width: 1240px) {
-        flex-direction: column;
-        align-items: center;
-        height: 100vh;
-        padding-bottom: 50px;
-        padding-top: 50px;
-
-        .logo-container {
-            display: none;
-        }
-    }
+  height: calc(100vh - 200px);
+  max-width: 1920px;
+  padding: 100px;
+  display: flex;
+  margin: 0 auto;
+  justify-content: space-between;
 }
 
+// ===========================
+// PROFILE IMAGE SECTION
+// ===========================
+
 .pass-img-container {
-    height: 100%;
-    position: relative;
-    width: 50%;
-    display: flex;
-    margin-top: auto;
-    margin-bottom: 0;
+  height: 100%;
+  position: relative;
+  width: 50%;
+  display: flex;
+  margin-top: auto;
+  margin-bottom: 0;
 
-    &:hover {
-        .pass-background {
-            img {
-                &:first-child {
-                    transition: all 0.5s ease-out;
-                    opacity: 0;
-                }
-
-                &:last-child {
-                    transition: all 0.5s ease-out;
-                    opacity: 1;
-                }
-            }
-        }
-    }
-
-    @media (max-width: 1240px) {
-        .pass-background img {
-            display: none;
-        }
-
-        .pass-image-box {
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: inherit;
-            left: auto;
-            top: auto;
-        }
-
-        .pass-img-box img {
-            display: none;
-        }
-
-        .logo-mobile {
-            display: flex !important;
-            height: 50vh;
-        }
-    }
+  &:hover .pass-background img {
+    &:first-child { opacity: 0; transition: all 0.5s ease-out; }
+    &:last-child { opacity: 1; transition: all 0.5s ease-out; }
+  }
 }
 
 .pass-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+
+  img {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 1;
+    object-fit: contain;
+    transition: opacity 0.3s ease;
 
-    img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-        transition: opacity 0.3s ease;
-
-        &:first-child {
-            z-index: 1;
-            opacity: 1;
-
-            &:last-child {
-                z-index: 2;
-                opacity: 0;
-            }
-        }
-    }
+    &:first-child { z-index: 1; opacity: 1; }
+    &:last-child { z-index: 2; opacity: 0; }
+  }
 }
 
 .pass-img-box {
-    position: absolute;
-    top: 0;
-    left: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 3;
+
+  .pass-img {
     width: 100%;
     height: 100%;
-    z-index: 3;
-
-    .pass-img {
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-    }
-
-    @media screen and (max-width: 1240px) {
-        position: inherit;
-        top: auto;
-        left: auto;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
+    object-fit: contain;
+  }
 }
 
+// ===========================
+// TEXT & LOGO SECTION
+// ===========================
+
 .pass-text-box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    position: relative;
-    width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+  width: 50%;
 
-    h1 {
-        margin-bottom: 0;
-    }
-
-    @media screen and (max-width: 1240px) {
-        width: 100%;
-    }
+  h1 { margin-bottom: 0; }
 }
 
 .logo-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  position: relative;
 }
-
 
 .logo-box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 
-    img {
-        position: absolute;
-        top: -43px;
-        width: 85px;
-        height: 85px;
-        object-fit: contain;
+  img {
+    position: absolute;
+    top: -43px;
+    width: 85px;
+    height: 85px;
+    object-fit: contain;
+    transition: all 0.5s ease-out;
 
-        &:first-child {
-            transition: all 0.5s ease-out;
-            transform: scale(1) translate(0, 0);
-            opacity: 1;
-        }
+    &:first-child { transform: scale(1) translate(0, 0); opacity: 1; }
+    &:last-child { transform: scale(1) translate(0.5px, 0); opacity: 0; }
+  }
 
-        &:last-child {
-            transition: all 0.5s ease-out;
-            transform: scale(1) translate(0.5px, 0);
-            opacity: 0;
-        }
-    }
-
-    &:hover {
-        img {
-            &:first-child {
-                transform: scale(1) translate(-0.5px, 0);
-                opacity: 0;
-            }
-
-            &:last-child {
-                transform: scale(1) translate(0, 0);
-                opacity: 1;
-            }
-        }
-    }
+  &:hover img {
+    &:first-child { transform: scale(1) translate(-0.5px, 0); opacity: 0; }
+    &:last-child { transform: scale(1) translate(0, 0); opacity: 1; }
+  }
 }
 
+// ===========================
+// SOCIAL MEDIA & INTERACTIVE ELEMENTS
+// ===========================
+
 .sozial-media-button {
-    display: flex;
-    gap: 15px;
-    position: absolute;
-    padding-bottom: 30px;
-    right: 0;
-    bottom: -70px;
-    flex-direction: column;
+  display: flex;
+  gap: 15px;
+  position: absolute;
+  padding-bottom: 30px;
+  right: 0;
+  bottom: -70px;
+  flex-direction: column;
 }
 
 .email-box,
 .github-box,
-.linkedin-box {
-    position: relative;
-    width: 40px;
-    height: 40px;
-    overflow: hidden;
+.linkedin-box,
+.arrow-down {
+  position: relative;
+  width: 40px;
+  height: 40px;
+  overflow: hidden;
 
+  img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    transition: opacity 0.3s ease;
 
-    img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-        transition: opacity 0.3s ease;
+    &:first-child { opacity: 1; z-index: 1; }
+    &:last-child { opacity: 0; z-index: 2; }
+  }
 
-        &:first-child {
-            opacity: 1;
-            z-index: 1;
-        }
-
-        &:last-child {
-            opacity: 0;
-            z-index: 2;
-        }
-    }
-
-
-    &:hover {
-        img {
-            &:first-child {
-                opacity: 0;
-            }
-
-            &:last-child {
-                opacity: 1;
-            }
-        }
-    }
+  &:hover img {
+    &:first-child { opacity: 0; }
+    &:last-child { opacity: 1; }
+  }
 }
 
 .arrow-down {
-    display: flex;
-    position: relative;
-    flex-direction: column;
-    width: 50px;
-    height: 100px;
-    cursor: pointer;
-
-    img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-        transition: opacity 0.3s ease;
-
-        &:first-child {
-            opacity: 1;
-            z-index: 1;
-        }
-
-        &:last-child {
-            opacity: 0;
-            z-index: 2;
-        }
-    }
-
-
-    &:hover {
-        img {
-            &:first-child {
-                opacity: 0;
-            }
-
-            &:last-child {
-                opacity: 1;
-            }
-        }
-    }
+  display: flex;
+  flex-direction: column;
+  width: 50px;
+  height: 100px;
+  cursor: pointer;
 }
 
-@media screen and (max-width: 1240px) {
+// ===========================
+// BASIC RESPONSIVE (DESKTOP ONLY)
+// ===========================
 
-    .pass-img-container,
-    .pass-img-box,
-    .pass-text-box {
-        margin: 0;
-        padding: 0;
-    }
-
-    .header {
-        padding-top: 0;
-    }
+@media screen and (max-width: 1620px) {
+  header h1 { text-align: center; width: 100%; }
 }
 
-.navbar-mobile {
-    display: none;
-    justify-content: space-between;
-    align-items: flex-start;
-    padding-left: 0px;
-    padding-right: 0px;
-    height: 100px;
-    width: 100%;
-
-    .menu-icon {
-        width: 30px;
-        height: 32px;
-        object-fit: contain;
-    }
-
-    @media screen and (max-width: 1240px) {
-        display: flex;
-    }
+@media screen and (max-width: 1340px) {
+  header { padding-left: 50px; padding-right: 50px; }
 }
 
-.logo-navbar-mobile {
-    width: 60px;
-    height: 70px;
-    object-fit: contain;
-    position: relative;
-}
-
-.navbar-menu {
-    //display: none;
-    position: absolute;
-    top: 115px;
-    left: 0;
-    width: 100%;
-    height: calc(50vh + 5px);
-    background-image: url('/assets/img/header/bubble_default.png');
-    object-fit: contain;
-    background-repeat: no-repeat;
-    z-index: 10;
-    background-position: center;
-    background-size: contain;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding-bottom: 20px;
-    padding-top: 20px;
-    gap: 50px;
-    color: rgb(37, 45, 51);
-    font-size: 22px;
-    font-weight: 400;
-    
-    /* Hinzugefügt, um Klicks durch den Menü-Container zuzulassen */
-    pointer-events: none; 
-
-    a {
-        margin: 0;
-        /* Hinzugefügt, um Links wieder klickbar zu machen */
-        pointer-events: auto; 
-    }
-}
-
-.language-mobile {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-}
-
-.language-box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    cursor: pointer;
-
-    img {
-        position: absolute;
-        width: 40px;
-        height: 40px;
-        object-fit: contain;
-    }
-}
-
-.language-aktiv {
-    color: white !important;
-}
-
-// ... existing code ...
-.menu-icon img {
-    position: absolute;
-    left: 0;
-    top: 0;
-    transition: opacity 0.5s ease;
-    opacity: 0;
-    pointer-events: none;
-}
-
-.menu-icon img.visible {
-    opacity: 1;
-    z-index: 2;
-}
-
-.menu-icon {
-    position: relative;
-    width: 40px;
-    height: 40px;
-    z-index: 20;
-}
-
-.navbar-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background: rgba(0, 0, 0, 0.2);
-    z-index: 19;
-}
-
-.navbar-menu {
-    z-index: 20;
-
-    @media screen and (max-width: 1040px) {
-        top: 130px;
-    }
-}
+// Import mobile styles
+@import 'header-mobile';
