--- a/src/app/features/privacy-policy/privacy-policy.component.scss
+++ b/src/app/features/privacy-policy/privacy-policy.component.scss
@@ -1,13 +1,21 @@
+// ===========================
+// PRIVACY POLICY CONTAINER
+// ===========================
+
 .privacy-policy-container {
-    padding: 100px;
+  padding: 100px;
 }
 
-a {
-    color: rgb(137, 187, 217);
+// ===========================
+// LINKS
+// ===========================
 
-    &:hover {
-        color: black;
-        background-color: rgb(137, 187, 217);
-        border-radius: 20px;
-    }
+a {
+  color: rgb(137, 187, 217);
+
+  &:hover {
+    color: black;
+    background-color: rgb(137, 187, 217);
+    border-radius: 20px;
+  }
 }
