--- a/src/app/shared/home/home.component.scss
+++ b/src/app/shared/home/home.component.scss
@@ -1,3 +1,7 @@
+// ===========================
+// MAIN CONTAINER
+// ===========================
+
 main {
-    padding-bottom: 100px;
+  padding-bottom: 100px;
 }
