--- a/src/app/shared/home/my-projects/projects/projects/projects.component.scss
+++ b/src/app/shared/home/my-projects/projects/projects/projects.component.scss
@@ -1,319 +1,366 @@
-.projects {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 100px;
+// ===========================
+// PROJECTS MAIN CONTAINER
+// ===========================
 
-    h2 {
-        color: rgb(137, 187, 217);
-    }
+.projects {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 100px;
+
+  h2 {
+    color: rgb(137, 187, 217);
+  }
 }
 
+// ===========================
+// NAVIGATION TABS
+// ===========================
+
 .nav {
-    height: 100px;
-    width: 100%;
-    padding-left: 100px;
-    padding-right: 100px;
-    display: flex;
+  height: 100px;
+  width: 100%;
+  padding-left: 100px;
+  padding-right: 100px;
+  display: flex;
 
-    span {
-        font-size: 30px;
-        font-weight: 500;
-        color: rgb(137, 187, 217);
-    }
-
-    @media screen and (max-width: 1040px) {
-        display: none;
-    }
+  span {
+    font-size: 30px;
+    font-weight: 500;
+    color: rgb(137, 187, 217);
+  }
 }
 
 .nav-mobile {
-    display: none;
-    justify-content: space-between;
+  display: none;
+  justify-content: space-between;
 
-    span {
-        font-size: 18px;
-        margin: 0;
-    }
-
-    @media screen and (max-width: 1040px) {
-        display: flex;
-        width: 100%;
-    }
-
-    span {
-        font-size: 30px;
-        font-weight: 500;
-        color: rgb(137, 187, 217);
-    }
-
-    @media screen and (max-width: 1040px) {
-        display: flex;
-    }
-
-    @media screen and (max-width: 650px) {
-
-        span {
-            font-size: 18px !important;
-        }
-    }
+  span {
+    font-size: 30px;
+    font-weight: 500;
+    color: rgb(137, 187, 217);
+    margin: 0;
+  }
 }
 
 .tab {
-    height: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 25px 25px 0 0;
-    margin-right: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
-    cursor: pointer;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 25px 25px 0 0;
+  margin-right: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  cursor: pointer;
 
-    &:hover {
-        color: white !important;
-    }
+  &:hover {
+    color: white !important;
+  }
 
-    @media screen and (max-width: 1040px) {
-        height: 60px;
-    }
-}
-
-.active {
+  &.active {
     color: white !important;
     background-color: rgb(45, 57, 64) !important;
+  }
 }
 
+// ===========================
+// CONTENT AREA
+// ===========================
+
 .content {
-    background-color: rgb(45, 57, 64) !important;
-    height: 100%;
-    display: flex;
-    padding-left: 100px;
-    padding-right: 100px;
-    padding-top: 20px;
-    padding-bottom: 35px;
-    width: 100%;
-
-    @media screen and (max-width: 1340px) {
-        padding-left: 50px;
-        padding-right: 50px;
-    }
-
-    @media screen and (max-width: 1040px) {
-        flex-direction: column-reverse;
-        align-items: center;
-    }
+  background-color: rgb(45, 57, 64) !important;
+  height: 100%;
+  display: flex;
+  padding-left: 100px;
+  padding-right: 100px;
+  padding-top: 20px;
+  padding-bottom: 35px;
+  width: 100%;
 }
 
 .container-left {
-    width: 100%;
-    gap: 20px;
-    display: flex;
-    flex-direction: column;
-
-    @media screen and (max-width: 1040px) {
-        padding-top: 50px;
-    }
+  width: 100%;
+  gap: 20px;
+  display: flex;
+  flex-direction: column;
 }
 
 .container-right {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    margin-left: 50px;
-
-    @media screen and (max-width: 1040px) {
-        margin-left: 0;
-    }
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-left: 50px;
 }
 
+// ===========================
+// TEXT SECTION
+// ===========================
+
 .text-area {
-    display: flex;
-    flex-direction: column;
-    padding-top: 20px;
-    gap: 20px;
-    padding-left: 48px;
+  display: flex;
+  flex-direction: column;
+  padding-top: 20px;
+  gap: 20px;
+  padding-left: 48px;
 
-    h5 {
-        font-size: 28px;
-        margin: 0;
-    }
+  h5 {
+    font-size: 28px;
+    margin: 0;
+  }
 
-    p {
-        margin: 0px;
-        padding-left: 50px;
-    }
+  p {
+    margin: 0px;
+    padding-left: 50px;
+  }
 
-    img {
-        width: 29px;
-        height: 26px;
-    }
-
-    @media screen and (max-width: 1040px) {
-        padding-left: 0;
-    }
+  img {
+    width: 29px;
+    height: 26px;
+  }
 }
 
 .text-title {
-    display: flex;
-    align-items: center;
-    gap: 20px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
 
-    span {
-        font-size: 18px;
-        margin: 0;
-
-        @media screen and (max-width: 1040px) {
-            display: none;
-        }
-    }
+  span {
+    font-size: 18px;
+    margin: 0;
+  }
 }
 
+// ===========================
+// PICTURE SECTION
+// ===========================
+
 .picture-area {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    gap: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  gap: 20px;
 
-    span {
-        font-size: 18px;
-        padding-top: 20px;
-    }
+  span {
+    font-size: 18px;
+    padding-top: 20px;
+  }
 
-    h3 {
-        display: none;
-    }
-
-    p {
-        display: none;
-    }
-
-    @media screen and (max-width: 1040px) {
-        span {
-            display: none;
-        }
-
-        h3 {
-            display: flex;
-            color: rgb(137, 187, 217);
-        }
-
-        p {
-            display: flex;
-        }
-    }
+  h3,
+  p {
+    display: none;
+  }
 }
 
 .technologies {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 20px;
-    gap: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 20px;
+  gap: 20px;
 
-    img {
-        width: 100%;
-        height: 36px;
-        object-fit: contain;
-    }
-
-    @media screen and (max-width: 1040px) {
-        display: none;
-    }
+  img {
+    width: 100%;
+    height: 36px;
+    object-fit: contain;
+  }
 }
 
 .screen {
-    width: 460px;
-    height: 320px;
-    object-fit: contain;
-    border-radius: 25px;
+  width: 460px;
+  height: 320px;
+  object-fit: contain;
+  border-radius: 25px;
 }
 
 .screen-cover {
-    object-fit: cover !important;
-    width: 460px;
-    height: 320px;
-    border-radius: 25px;
-    object-position: right top left;
-
+  object-fit: cover !important;
+  width: 460px;
+  height: 320px;
+  border-radius: 25px;
+  object-position: right top left;
 }
 
 .white-screen {
-    width: 460px;
-    height: 320px;
-    border-radius: 25px;
-    background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 70px;
+  width: 460px;
+  height: 320px;
+  border-radius: 25px;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 70px;
 
-    h5 {
-        font-size: 26px;
-        color: rgb(137, 187, 217);
-    }
+  h5 {
+    font-size: 26px;
+    color: rgb(137, 187, 217);
+  }
 }
 
+// ===========================
+// BUTTON SECTIONS
+// ===========================
+
 .button-box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 
-    a {
-        width: 120px;
-        height: 50px;
-        border-radius: 30px;
-        border: 1.5px solid rgb(137, 187, 217);
-        font-size: 18px;
-        color: rgb(137, 187, 217);
-        background-color: transparent;
-        text-align: center;
-        line-height: 50px;
+  a {
+    width: 120px;
+    height: 50px;
+    border-radius: 30px;
+    border: 1.5px solid rgb(137, 187, 217);
+    font-size: 18px;
+    color: rgb(137, 187, 217);
+    background-color: transparent;
+    text-align: center;
+    line-height: 50px;
 
-        &:hover {
-            background-color: rgb(137, 187, 217);
-            color: white;
-            cursor: pointer;
-        }
+    &:hover {
+      background-color: rgb(137, 187, 217);
+      color: white;
+      cursor: pointer;
     }
-
-    @media screen and (max-width: 1040px) {
-        display: none;
-    }
+  }
 }
 
 .button-box-mobile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  padding-top: 50px;
+  padding-bottom: 20px;
+
+  .transparenz-box {
+    width: 120px;
+    height: 50px;
+    border-radius: 30px;
+    border: 1.5px solid rgb(137, 187, 217);
+    font-size: 18px;
+    color: rgb(137, 187, 217);
+    background-color: transparent;
+    text-align: center;
+    line-height: 50px;
+  }
+
+  .blue-box {
+    width: 120px;
+    height: 50px;
+    border-radius: 30px;
+    border: 1.5px solid rgb(137, 187, 217);
+    font-size: 18px;
+    color: rgb(37, 45, 51);
+    background-color: rgb(137, 187, 217);
+    text-align: center;
+    line-height: 50px;
+  }
+}
+
+// ===========================
+// RESPONSIVE DESIGN
+// ===========================
+
+@media screen and (max-width: 1340px) {
+  .content {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+}
+
+@media screen and (max-width: 1040px) {
+  .nav {
+    display: none;
+  }
+
+  .nav-mobile {
     display: flex;
-    justify-content: center;
+    width: 100%;
+  }
+
+  .tab {
+    height: 60px;
+  }
+
+  .content {
+    flex-direction: column-reverse;
     align-items: center;
-    gap: 20px;
+  }
+
+  .container-left {
     padding-top: 50px;
-    padding-bottom: 20px;
+    hyphens: auto;
 
-    .transparenz-box {
-        width: 120px;
-        height: 50px;
-        border-radius: 30px;
-        border: 1.5px solid rgb(137, 187, 217);
-        font-size: 18px;
-        color: rgb(137, 187, 217);
-        background-color: transparent;
-        text-align: center;
-        line-height: 50px;
+    p {
+      padding-left: 0 !important;
     }
 
-    .blue-box {
-        width: 120px;
-        height: 50px;
-        border-radius: 30px;
-        border: 1.5px solid rgb(137, 187, 217);
-        font-size: 18px;
-        color: rgb(37, 45, 51);
-        background-color: rgb(137, 187, 217);
-        text-align: center;
-        line-height: 50px;
+    h5 {
+      font-size: 18px !important;
+      color: rgb(137, 187, 217);
     }
+  }
+
+  .container-right {
+    margin-left: 0;
+  }
+
+  .text-area {
+    padding-left: 0;
+  }
+
+  .text-title {
+    span {
+      display: none;
+    }
+  }
+
+  .picture-area {
+    span {
+      display: none;
+    }
+
+    h3 {
+      display: flex;
+      color: rgb(137, 187, 217);
+    }
+
+    p {
+      display: flex;
+    }
+  }
+
+  .technologies {
+    display: none;
+  }
+
+  .button-box {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .nav-mobile {
+    span {
+      font-size: 18px !important;
+    }
+  }
+
+  .tab {
+    padding-left: 3px;
+    padding-right: 3px;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .screen,
+  .screen-cover,
+  .white-screen {
+    width: 270px;
+    height: 185px;
+  }
 }
