--- a/src/app/shared/home/why-me/why-me.component.scss
+++ b/src/app/shared/home/why-me/why-me.component.scss
@@ -1,108 +1,127 @@
+// ===========================
+// WHY ME MAIN CONTAINER
+// ===========================
+
 .why-me-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 100px;
-    padding-bottom: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 100px;
+  padding-bottom: 0;
 
-    h2 {
-        margin-top: 0;
-        color: rgb(137, 187, 217);
-    }
-
-    @media screen and (max-width: 1340px) {
-        padding-left: 50px;
-        padding-right: 50px;
-
-        h2 {
-            margin-bottom: 50px;
-        }
-    }
+  h2 {
+    margin-top: 0;
+    color: rgb(137, 187, 217);
+  }
 }
 
-.why-me-box {
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    gap: 50px;
+// ===========================
+// WHY ME CONTENT
+// ===========================
 
-    @media screen and (max-width: 1240px) {
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 50px;
-    }
+.why-me-box {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 50px;
 }
 
 .from {
-    display: flex;
-    align-items: start;
-    justify-content: center;
-    gap: 20px;
-    text-align: center;
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  gap: 20px;
+  text-align: center;
 
-    h4 {
-        margin: 0;
-    }
-
-    @media screen and (max-width: 550px) {
-        width: calc(100vw - 100px);
-    }
+  h4 {
+    margin: 0;
+  }
 }
 
 .why-me-text {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 500px;
-    gap: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 500px;
+  gap: 20px;
 
-    p {
-        margin: 0;
-    }
-
-    @media screen and (max-width: 1240px) {
-        p {
-            text-align: center;
-        }
-    }
-
-    @media screen and (max-width: 550px) {
-        width: calc(100vw - 100px);
-    }
+  p {
+    margin: 0;
+  }
 }
 
+// ===========================
+// BUTTON SECTION
+// ===========================
+
 .why-me-button-box {
-    display: flex;
-    width: 100%;
-    justify-content: end;
+  display: flex;
+  width: 100%;
+  justify-content: end;
 }
 
 .why-me-button {
-    display: flex;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
+  width: 150px;
+  font-size: 18px;
+  color: rgb(137, 187, 217);
+  background-image: url('/assets/img/why-me/lets-talk-default.svg');
+  background-size: contain;
+  background-repeat: no-repeat;
+  cursor: pointer;
+  background-position: center;
+
+  &:hover {
+    background-image: url('/assets/img/why-me/lets-talk-hover.svg');
+  }
+
+  &:active {
+    background-image: url('/assets/img/why-me/lets-talk-click.svg');
+  }
+}
+
+// ===========================
+// RESPONSIVE DESIGN
+// ===========================
+
+@media screen and (max-width: 1340px) {
+  .why-me-container {
+    padding-left: 50px;
+    padding-right: 50px;
+
+    h2 {
+      margin-bottom: 50px;
+    }
+  }
+}
+
+@media screen and (max-width: 1240px) {
+  .why-me-box {
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 50px;
-    width: 150px;
-    font-size: 18px;
-    color: rgb(137, 187, 217);
-    background-image: url('/assets/img/why-me/lets-talk-default.svg');
-    background-size: contain;
-    background-repeat: no-repeat;
-    cursor: pointer;
-    background-position: center;
+    gap: 50px;
+  }
 
-    &:hover {
-        background-image: url('/assets/img/why-me/lets-talk-hover.svg');
+  .why-me-text {
+    p {
+      text-align: center;
     }
+  }
 
-    &:active {
-        background-image: url('/assets/img/why-me/lets-talk-click.svg');
-    }
+  .why-me-button {
+    display: none;
+  }
+}
 
-    @media screen and (max-width: 1240px) {
-        display: none;
-    }
+@media screen and (max-width: 550px) {
+  .from,
+  .why-me-text {
+    width: calc(100vw - 100px);
+  }
 }
