--- a/src/app/features/legal-notice/legal-notice.component.html
+++ b/src/app/features/legal-notice/legal-notice.component.html
@@ -1,4 +1,6 @@
 <app-navbar></app-navbar>
+<app-navbar-mobile class="navbar-mobile"></app-navbar-mobile>
+
 <div class="legal-notice-container">
   <h2>{{ 'LEGAL_TITLE' | translate }}</h2>
   <h3>{{ 'LEGAL_IMPRINT' | translate }}</h3>
