--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -5,7 +5,7 @@
 header {
   height: calc(100vh - 200px);
   max-width: 1920px;
-  padding: 100px;
+  padding: 100px 100px 0 100px ;
   display: flex;
   margin: 0 auto;
   justify-content: space-between;
@@ -24,8 +24,15 @@ header {
   margin-bottom: 0;
 
   &:hover .pass-background img {
-    &:first-child { opacity: 0; transition: all 0.5s ease-out; }
-    &:last-child { opacity: 1; transition: all 0.5s ease-out; }
+    &:first-child {
+      opacity: 0;
+      transition: all 0.5s ease-out;
+    }
+
+    &:last-child {
+      opacity: 1;
+      transition: all 0.5s ease-out;
+    }
   }
 }
 
@@ -46,8 +53,15 @@ header {
     object-fit: contain;
     transition: opacity 0.3s ease;
 
-    &:first-child { z-index: 1; opacity: 1; }
-    &:last-child { z-index: 2; opacity: 0; }
+    &:first-child {
+      z-index: 1;
+      opacity: 1;
+    }
+
+    &:last-child {
+      z-index: 2;
+      opacity: 0;
+    }
   }
 }
 
@@ -78,7 +92,9 @@ header {
   position: relative;
   width: 50%;
 
-  h1 { margin-bottom: 0; }
+  h1 {
+    margin-bottom: 0;
+  }
 }
 
 .logo-container {
@@ -103,13 +119,27 @@ header {
     object-fit: contain;
     transition: all 0.5s ease-out;
 
-    &:first-child { transform: scale(1) translate(0, 0); opacity: 1; }
-    &:last-child { transform: scale(1) translate(0.5px, 0); opacity: 0; }
+    &:first-child {
+      transform: scale(1) translate(0, 0);
+      opacity: 1;
+    }
+
+    &:last-child {
+      transform: scale(1) translate(0.5px, 0);
+      opacity: 0;
+    }
   }
 
   &:hover img {
-    &:first-child { transform: scale(1) translate(-0.5px, 0); opacity: 0; }
-    &:last-child { transform: scale(1) translate(0, 0); opacity: 1; }
+    &:first-child {
+      transform: scale(1) translate(-0.5px, 0);
+      opacity: 0;
+    }
+
+    &:last-child {
+      transform: scale(1) translate(0, 0);
+      opacity: 1;
+    }
   }
 }
 
@@ -145,13 +175,25 @@ header {
     object-fit: contain;
     transition: opacity 0.3s ease;
 
-    &:first-child { opacity: 1; z-index: 1; }
-    &:last-child { opacity: 0; z-index: 2; }
+    &:first-child {
+      opacity: 1;
+      z-index: 1;
+    }
+
+    &:last-child {
+      opacity: 0;
+      z-index: 2;
+    }
   }
 
   &:hover img {
-    &:first-child { opacity: 0; }
-    &:last-child { opacity: 1; }
+    &:first-child {
+      opacity: 0;
+    }
+
+    &:last-child {
+      opacity: 1;
+    }
   }
 }
 
@@ -168,12 +210,94 @@ header {
 // ===========================
 
 @media screen and (max-width: 1620px) {
-  header h1 { text-align: center; width: 100%; }
+  header h1 {
+    text-align: center;
+    width: 100%;
+  }
 }
 
 @media screen and (max-width: 1340px) {
-  header { padding-left: 50px; padding-right: 50px; }
+  header {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
 }
 
-// Import mobile styles
-@import 'header-mobile';
+// ===========================
+// MOBILE RESPONSIVE BREAKPOINTS
+// ===========================
+
+@media screen and (max-width: 1240px) {
+  header {
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    padding-bottom: 50px;
+    padding-top: 0;
+
+    .logo-container {
+      display: none;
+    }
+  }
+
+  .pass-img-container {
+    .pass-background img {
+      display: none;
+    }
+
+    .pass-img-box {
+      position: inherit;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      img {
+        display: none;
+      }
+    }
+
+    .logo-mobile {
+      display: flex !important;
+      height: 50vh;
+    }
+  }
+
+  .pass-text-box {
+    width: 100%;
+  }
+
+  .navbar-mobile {
+    width: 100%;
+    padding-top: 50px;
+  }
+}
+
+@media screen and (max-width: 1040px) {
+  .logo-mobile {
+    object-fit: contain;
+    width: calc(100vw - 100px);
+  }
+}
+
+@media screen and (max-width: 820px) {
+  header {
+    height: auto;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .pass-text-box {
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  header {
+    padding: 20px;
+  }
+
+  .logo-mobile {
+    width: calc(100vw - 40px);
+    max-width: 320px;
+  }
+}
